[gd_scene load_steps=26 format=4 uid="uid://cb4ibh01rqcpt"]

[ext_resource type="Script" uid="uid://cabvjkvkoh7b8" path="res://src/interactable_component/interactable_component.gd" id="1_cpeuc"]
[ext_resource type="Script" uid="uid://lst0820fcck1" path="res://ast/actors/wardrobe/wardrobe.gd" id="1_dejff"]
[ext_resource type="Theme" uid="uid://dor86n6is4l5j" path="res://res/themes/default.tres" id="2_dejff"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ank7t"]
size = Vector3(0.19091797, 1.8436279, 1)

[sub_resource type="InputEventAction" id="InputEventAction_75gw0"]
action = &"Interact"

[sub_resource type="ViewportTexture" id="ViewportTexture_dejff"]
viewport_path = NodePath("InteractableComponent/Contents/UI/SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_nyf0v"]
size = Vector3(7, 5, 7)

[sub_resource type="BoxShape3D" id="BoxShape3D_lutt7"]
size = Vector3(1.1696081, 3.0027618, 1.6249962)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ckvv"]
cull_mode = 2
albedo_color = Color(0.6378435, 0.6378431, 0.63784313, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6am5y"]

[sub_resource type="ArrayMesh" id="ArrayMesh_ingbc"]
_surfaces = [{
"aabb": AABB(-2.2160683, -1, -1, 3.2160683, 2, 2),
"format": 34896613377,
"index_count": 66,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABQAHAAYABAAIAAUABQAJAAcACAAJAAUACQAKAAcABAALAAgACAALAAkABAAMAAsACQANAAoACwANAAkADAAOAAsACwAOAA0ADgAKAA0ADAAPAA4ADgAPAAoADwAQAAoADwARABAAEQASABAAEQATABIA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("AAAAAA8XAAC/ZP//AAAAAAAA/v8PFwAAv2QAAAAAAADIZAAAAAAAAP////8AAAAAyGT//wAAAADIZP///38AAP//AAAAAAAA//////9/AADIZP////8AAP//AAD/fwAAyGQAAP9/AAD///////8AAP//AAD//wAAyGQAAP//AAC/ZP////8AAL9kAAD//wAAAAD+/+/oAAAAAAAA7+gAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_iyoid"]
resource_name = "wardrobe_Cube_001"
_surfaces = [{
"aabb": AABB(-2.2160683, -1, -1, 3.2160683, 2, 2),
"attribute_data": PackedByteArray("/1//3/+f/7//n//f/1//v/9fZL7/n/9//59kvv9f/3//X/9f/5//P/+f/1//X/8//1//f/+f/3//X5oB/58AAP+fmgH/XwAA/1//P/+f/z+aIf9f/1//P/9f/1+aIf8/miH/f/9f/3//X////5//3/+f////X//f/5//f2Te/19k3v9//5//X2Te/z//n/8/"),
"format": 34896613399,
"index_count": 66,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAAIAAoADAAKAA0ADgAPABAADgARAA8AEgAOABAAEgAQABMAFAAVABYAFAAXABUAGAAUABYAGAAWABkAGgAbABwAGgAdABsAHgAfACAAHgAhAB8AIQAiAB8AIQAjACIA"),
"material": SubResource("StandardMaterial3D_6am5y"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("AAAAAA8X7Pu/ZP//AADs+wAA/v8PF+z7v2QAAAAA7PvIZAAAAAD///////8AAP//yGT//wAA/////wAAAAD/////AAD/f1TV////////VNX//////39U1f//AAD//1TV//8AAAAAVNX/////AABU1chkAAD///+/v2T//////7/IZP//////v79kAAD///+///8AAP///7//////////v8hkAAD/f/+///8AAP///7///wAA/3//v8hkAAD///+/yGQAAAAA/7///wAAAAD/v79kAAD//zPAAAD+/+/oM8C/ZP////8zwAAAAADv6DPA/////wAA///IZP///3///8hk//8AAP////////9////IZP//////////////////L8Ivwi/CL8Ivwi/CL8Ivwv+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoqqiqqKqoqqir///////////////////////////////8AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38O+A74DvgO+A74DvgO+A74/3//v/9//7//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ingbc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wm68x"]

[sub_resource type="ArrayMesh" id="ArrayMesh_halk6"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 372,
"index_data": PackedByteArray("AAARAAIAAAAJABEAIQACABEACQAhABEAEgAAAAIAEgAJAAAAEgACAA8AAgAiAA8AIQAiAAIAIwASAA8AIwAPACIAJAASACMAJAAjACIAJAAiABYAEAAkABYAIgAlABYAEAAWACUAJgAkABAAJgAQACUAJgASACQAIgAnACUAIQAnACIAJgAlABcAJQAnABcAKAAmABcAKAAXACcAGAAmACgAGAAoACcAKQAmABgAKQASACYAGAAnAAYACAAYAAYAKQAYAAgACAAGABkAJwAZAAYAKQAIABkAJwAqABkAKQAZACsAGQAqACsAGgApACsAGgArACoALAApABoALAAaACoALAAqABsAHAAsABsAJwAtACoAKgAuABsAHAAbAC4AKgAtAC4ALwAsABwALwApACwALwAcAC4AIQAtACcALwAuAAQALgAtAAQAAwAvAAQAAwAEAC0ADgApAC8AMAAvAAMADgAvADAAMAADAC0ADgASACkAMAAtADEAHQAwADEADgAwAB0AHQAxAAwALQAMADEADgAdAAwALQAyAAwADgAMAB4ADAAyAB4AMwAOAB4AMwAeADIANAAOADMANAAzADIANAAyAB8ADQA0AB8ALQA1ADIAMgA2AB8ADQAfADYAMgA1ADYANwA0AA0ANwAOADQANwANADYANgA1AAcANwA2AAcAIAA3AAcAIAAHADUAFAAOADcAOAA3ACAAFAA3ADgAOAAgADUAEgAOABQAFAA4AAEAAQA4ADkAOAA1ADkAAQA5ABUANQAVADkAFAABABUANQA6ABUAFAAVAAUAFQA6AAUAOwAUAAUAOwAFADoAEgAUADwAPQAUADsAPAAUAD0APQA7ADoAEgA8AAkAPQA6ABMACwA9ABMAPAA9AAsACwATAD4APAALAD4AOgA+ABMACQA8AD8APAA+AAoAPwA8AAoACQA/ACEAPwAKACEAPgAhAAoAOgAhAD4ANQAhADoALQAhADUA"),
"lods": [0.08245351, PackedByteArray("AAARAAIAEgAAAAIAAAAJABEAEgAJAAAACQAKABEACQALAAoAEgALAAkACwATAAoAEwARAAoACwAUABMAEgAUAAsAFAAFABMAFQATAAUAFAAVAAUAFQARABMAEQAWAAIAEgACAA8AAgAWAA8AEgAPABYAEQAGABYAEAASABYAEAAWABcAFgAGABcAGAAQABcAGAAXAAYACAAQABgACAASABAACAAYAAYAEQAMAAYADAARABUACAAGABkAGgAIABkABgAbABkAGgAZABsABgAMABsAHAAIABoAHAAaABsAHAAbAAQAGwAMAAQADgAIABwADgASAAgAAwAcAAQADgAcAAMAAwAEAAwADgADAB0AHQADAAwADgAdAAwAEgAOABQADgAMAB4ADAAfAB4ADgAeAB8ADAAVAB8AFAAOAA0ADQAOAB8AHwAVAAcADQAfAAcAFAABABUAIAANAAcAFAANACAAIAAHABUAFAAgAAEAAQAgABUA"), 0.24338607, PackedByteArray("AAAJAAIACQAKAAIACQALAAoAAAALAAkACwAFAAoABQACAAoACwABAAUAAAABAAsADAACAAUAAQAHAAUADAAFAAcAAQANAAcADQAOAAcAAQAOAA0ADgAMAAcAAAAOAAEADgADAAwAAAACAA8ADgAIAAMADgAAAAgAAwAEAAwAAwAIAAQAAgAMAAYABgAMAAQAAgAGAA8ACAAGAAQAEAAAAA8ACAAAABAAEAAPAAYACAAQAAYA"), 0.83996445, PackedByteArray("AAAFAAIAAAACAAYAAAABAAUAAQAHAAUABAACAAUAAgAEAAYABAAFAAcACAAAAAYACAAGAAQAAAADAAEAAwAAAAgAAQADAAcAAwAIAAQAAwAEAAcA"), 1.5080065, PackedByteArray("AAABAAIAAAADAAEAAwAAAAIAAQAEAAIAAwACAAQAAQADAAQA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 64,
"vertex_data": PackedByteArray("/38AAAAAAAD//wAA/38AAP9///8AAAAAA08AAED2AADiOP//bOoAAIn9//8GZwAAdQL//wZnAABs6v//HMcAAAAAAAD/fwAA+JgAAHUCAAAcx///khUAAIHaAAB9JQAA/3//////AACB2gAAgdoAAPiYAACJ/QAABmf//3UCAAB9JQAAfSUAAPiY//91AgAABmcAAHUCAABs6v//4jgAAIn9AAAGZwAA//////9/AADiOP//khUAAJIV///iOAAAdQIAAAZnAAAAAP///38AAL4JAAD7sAAAkhX//xzHAAB9JQAAgdoAAP9/AAD//wAA+Jj//4n9AAAcx///bOoAAED2AAD7sAAA+7D//74JAAADT///vgkAAANPAAC+CQAA4jgAAJIVAAB9Jf//fSUAAJIVAADiOAAAvgn//wNPAAC+CQAAA08AAHUCAAD4mAAAvgn///uwAAB1Av//+JgAAJIVAAAcxwAAA0///0D2AAB9Jf//gdoAAOI4AABs6gAABmcAAIn9AAAGZ///if0AAPuw//9A9gAA+7AAAED2AAAcxwAAbOoAAED2///7sAAAgdr//4HaAABs6gAAHMcAAIn9AAD4mAAAif3///iYAABA9v//A08AAED2AAADTwAAHMcAAJIVAABs6gAA4jgAAIHa//99JQAA+7AAAL4JAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_sl7q1"]
resource_name = "wardrobe_Cylinder"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("////f/+//3///wAA/2cAAP9v/38AAAAAAAD/f/+/joJ8qML4b/3/v//HAAD/pwAA/z//f/83AADdHRTzQXwCtBVzIeL/P46CvQMCtI6C/7//9/9//+cAAP/f/3//n/9//4f/f/9/AAD/H/9//wcAACFi6Yz/P2/9AzS9g3DrjZT7y72D+8tB/HDrcOuNlI2U//cAAP/XAAD/x/9//78AAP+v/3//lwAA/4cAAP9//3//X/9//1cAAP9P/3//PwAA/zf/f/8nAAD/FwAA/wf/f90d6Yz8S72D6gzdneoMIeKPAv+/FXPdnXB9/78hYhTz/EtB/AK0vYNB/AK0wviC1/+/b/2NlHDrPIeC172DArT/9/9//+8AAP/3AAD/7/9//+//f//vAAD/5/9//+f/f//fAAD/5wAA/9//f//fAAD/1/9//9f/f//PAAD/1wAA/8//f//P/3//zwAA/8f/f/+/AAD/xwAA/7//f/+3AAD/t/9//7f/f/+vAAD/twAA/6//f/+nAAD/rwAA/6f/f/+n/3//nwAA/5//f/+XAAD/nwAA/5f/f/+X/3//jwAA/4//f/+P/3//hwAA/48AAP+H/3//f/9//3cAAP9/AAD/d/9//3f/f/9vAAD/dwAA/2//f/9vAAD/Z/9//2f/f/9fAAD/ZwAA/1//f/9fAAD/V/9//1f/f/9PAAD/VwAA/0//f/9HAAD/TwAA/0f/f/9H/3//RwAA/z//f/83AAD/PwAA/zf/f/8vAAD/L/9//y//f/8nAAD/LwAA/yf/f/8n/3//HwAA/x//f/8XAAD/HwAA/xf/f/8X/3//DwAA/w//f4JXPId8KDyHjhSNlDwHfKg8B4LXvQP7y3wowviOFHDrAzRB/IJXwvjCeILXcWtw63FrjZTCeHyoQXz7y/8P/3//BwAA/w8AAP8H/38h4umMgtc8hxTz3Z3C+HyoQfz7yxTzIeIh4hTzgtfC+AK0QfzdnRTzvYP7y+mMIeLdnemMfKg8h+mM3Z08h3yo"),
"format": 34896613399,
"index_count": 372,
"index_data": PackedByteArray("AAAkAAIAAAAUACQARABFAEYARABHAEUASAAVAEkASABKABUASwBMAE0ASwAWAEwATgAlAE8ATgBQACUAUQBSAFMAUQBUAFIAVQAKAFYAVQAmAAoAVwBYAFkAVwBaAFgAAQBbACcAAQBcAFsAXQBeAF8AXQBgAF4AKABhAGIAKABjAGEAZABlAAsAZABmAGUAFwBnAGgAFwBpAGcAagBrACkAagBsAGsAbQBuAG8AbQBwAG4AGAAZACoAGAArABkAcQByAHMAcQB0AHIAdQB2AHcAdQAEAHYAeAADAHkAeAB6AAMAewB8AH0AewAsAHwAfgAtAH8AfgCAAC0AgQCCAIMAgQAuAIIAhACFAIYAhACHAIUAiAAvAIkAiAAMAC8AigCLAIwAigCNAIsAMACOAA0AMACPAI4AkACRAJIAkACTAJEAlACVADEAlACWAJUAGgCXAJgAGgCZAJcAmgCbADIAmgCcAJsAnQARADUAEQCeAB4AnQCeABEAngCfADQAngCgAJ8AnwCgADYAnQCgAJ4AoAA4ABIAoAChADgAOAChAKIAoACjAKEAnQCjAKAAoQCkADcAoQCjAKQApACjAA4AowAdAKUAowCmAB0AHQCmADwAowCdAKcAowCnAKYApgCoADsApgCnAKgAqACnABAAqQCdABwAqgCdAKkApwCdAKoAqgCpADkApwCqADoAOgCqAA8ApwA6AKsArACtAK4ArACvAK0AMwAFABsAMwAGAAUAPQAgAAcAIACwALEAPQCwACAAsACyAB8AsAA+ALIAsgA+ALMAPQA+ALAAPgC0AAkAPgC1ALQAtAC1AD8APgAhALUAPQAhAD4AtQC2ACIAtQAhALYAtgAhALcAIQC4AEAAIQC5ALgAuAC5AAgAIQA9ALoAIQC6ALkAuQC7AEEAuQC6ALsAuwC6AEIAvAA9AL0AvgA9ALwAugA9AL4AvgC8ACMAugC+AEMAQwC+AL8AugBDABMA"),
"lods": [0.08245351, PackedByteArray("AAAkAAIAAAAUACQAFAAVACQAFAAWABUAFgAlABUAFgAmACUAJgAKACUAJgAnAAoAJgABACcAAQAoACcAKAALACcAKAAXAAsAFwApAAsAFwAYACkAGAAqACkAGAAZACoAGAArABkAKwAEABkABAADABkABAAsAAMALAAtAAMALAAuAC0ALgAvAC0ALgAMAC8ADAANAC8ADAAwAA0AMAAxAA0AMAAaADEAGgAyADEAGgAzADIAMwAbADIAMwAFABsAMwAGAAUAEQA0AB4ANQA0ABEANAASADYANQASADQAEgA3ADgAEgAdADcANQAdABIANwAdAA4AOQA1ABwAOgA1ADkAHQA1ADoAOgA5AA8AHQA6ADsAOwA6ABAAHQA7ADwAPQAgAAcAPQAfACAAPQA+AB8APgA/AAkAPgAiAD8APgAhACIAPQAhAD4AIQAIAEAAIQBBAAgAIQA9ABMAIQATAEEAQQATAEIAEwA9ACMAEwAjAEMA"), 0.24338607, PackedByteArray("AAAUAAIAFAAVAAIAFAAWABUAFgAKABUAFgABAAoAAQALAAoAAQAXAAsAFwAYAAsAGAAZAAsAGAAEABkABAADABkABAAMAAMADAANAAMADAAaAA0AGgAbAA0AGgAGABsABgAFABsADwARABwAHQARAA8AHQAPABAAEQAdABIAEgAdAA4AEQASAB4ABwAfACAABwAJAB8ABwAhAAkACQAhACIAIQAHABMAEwAHACMAIQATAAgA"), 0.83996445, PackedByteArray("AAAKAAIAAAABAAoAAQALAAoAAQAEAAsABAADAAsABAAMAAMADAANAAMADAAGAA0ABgAFAA0ADgAPABAADgARAA8AEQAOABIABwAIAAkACAAHABMA"), 1.5080065, PackedByteArray("AAABAAIAAQADAAIAAQAEAAMABAAFAAMABAAGAAUABwAIAAkA")],
"material": SubResource("StandardMaterial3D_wm68x"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 192,
"vertex_data": PackedByteArray("/38AAAAA//v//wAA/3//u/9///8AAP/74jj//2zq/5MDTwAAQPb/i/9///8AAP/7/38AAAAA//v/fwAAAAD/PwNPAABA9v8///8AAP9//z+J/f//Bmf/y2zq//8cx/+jAAAAAP9//7t1Av//Bmf/y+I4//9s6v+/if3//wZn/79s6v//HMf/v/9///8AAP+/dQL//wZn/78AAAAA/3//P/iYAAB1Av/7HMf//5IV/uuB2gAAfSX+44HaAACB2v+b+JgAAIn9/4P/f///////g30lAAB9Jf7jBmf//3UC//scx///khX/v/9///////+/Bmf//3UC/7+B2gAAfSX/P/iYAAB1Av8/+JgAAIn9/z+B2gAAgdr/P30lAAB9Jf8/+Jj//3UC//ts6v//4jj/24n9AAAGZ//L//////9//7tA9gAA+7D/qxzH//9s6v+T+Jj//4n9/4P/fwAA////g30lAACB2v+bkhX//xzH/6O+CQAA+7D/qwAA////f/+7dQIAAAZn/8uSFf//4jj/2+I4//+SFf7rBmcAAHUC//viOP//khX/v/iY//91Av+/khX//+I4/7+SFf//HMf/vwAA////f/+/bOr//+I4/7///////3//vxzH//9s6v+/+Jj//4n9/78GZwAAdQL/P4n9AAAGZ/8/QPYAAPuw/z//fwAA////P30lAACB2v8/vgkAAPuw/z91AgAABmf/P/iYAAB1Av7z+7D//74J/vP4mP//dQL+8/uwAAC+Cf7z+7AAAL4J/uv7sP//vgn+6xzHAACSFf7rHMcAAJIV/uOB2v//fSX+4xzH//+SFf7jgdoAAH0l/9uB2v//fSX/22zqAADiOP/bbOoAAOI4/9NA9v//A0//02zq///iOP/TQPYAAANP/9NA9gAAA0//y0D2//8DT//Lif0AAAZn/8P//////3//w4n9//8GZ//D//8AAP9//8OJ/f//+Jj/u4n9AAD4mP+7if0AAPiY/7NA9v//+7D/s4n9///4mP+zQPYAAPuw/7Ns6v//HMf/q0D2///7sP+rbOoAABzH/6ts6gAAHMf/o4Ha//+B2v+jgdoAAIHa/6Mcx///bOr/m4Ha//+B2v+bHMcAAGzq/5scxwAAbOr/k/uw//9A9v+T+7AAAED2/5P7sAAAQPb/i/iY//+J/f+L+7D//0D2/4v4mAAAif3/i/9/AAD///+DBmf//4n9/4P/f///////gwZnAACJ/f+DBmcAAIn9/4sDT///QPb/iwZn//+J/f+LA08AAED2/5MDT///QPb/k+I4AABs6v+T4jgAAGzq/5t9Jf//gdr/m+I4//9s6v+bfSUAAIHa/6N9Jf//gdr/o5IVAAAcx/+jkhUAABzH/6u+Cf//+7D/q5IV//8cx/+rvgkAAPuw/7N1Av//+Jj/s74J///7sP+zdQIAAPiY/7N1AgAA+Jj/u3UC///4mP+7AAAAAP9//8N1Av//Bmf/wwAA////f//DdQIAAAZn/8O+Cf//A0//y74JAAADT//LvgkAAANP/9OSFf//4jj/074J//8DT//TkhUAAOI4/9OSFQAA4jj/230l//99Jf/bfSUAAH0l/9viOP//khX+430l//99Jf7j4jgAAJIV/uPiOAAAkhX+6wNP//++Cf7rA08AAL4J/uv7sP//vgn/vwNP//++Cf+/fSX//30l/7++Cf//A0//v74J///7sP+/dQL///iY/78DT///QPb/v30l//+B2v+/Bmf//4n9/7/7sP//QPb/v0D2///7sP+/gdr//4Ha/7+B2v//fSX/v0D2//8DT/+/if3///iY/78DTwAAvgn+8wZn//91Av7zA0///74J/vMGZwAAdQL+8xzHAACSFf8/+7AAAL4J/z9s6gAA4jj/P0D2AAADT/8/if0AAPiY/z9s6gAAHMf/PxzHAABs6v8/+7AAAED2/z8GZwAAif3/P+I4AABs6v8/dQIAAPiY/z+SFQAAHMf/P+I4AACSFf8/A08AAL4J/z+SFQAA4jj/P74JAAADT/8//38AAP9/AAD/fwAA/3////9/////f////3///wAA/38AAP9/AAD/f/9/AAD/fwAA/3////9////+//9//v//f/7//3////9//v//fwAA/3//fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/f////3////7//3////9//v//fwAA/38AAP9/AAD/fwAA/38AAP9//38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/////f////3////7//3/+//9//v//f/7//3////9//v//f////3/+//9//v//fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/3//fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3///////3////9//v//f/7//3////9//v//f////3/+//9//v//f////3/+//9//v//f/7//3////9//v//f/9/////f////3////9///8AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_halk6")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_58ro7"]

[sub_resource type="ArrayMesh" id="ArrayMesh_qit2o"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_hbpff"]
resource_name = "wardrobe_Cube"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_58ro7"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoq/////////////////////wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_qit2o")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6i6vr"]

[sub_resource type="ArrayMesh" id="ArrayMesh_qvb6x"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_1y52n"]
resource_name = "wardrobe_Cube_003"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_6i6vr"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoq/////////////////////wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_qvb6x")

[sub_resource type="BoxShape3D" id="BoxShape3D_dejff"]
size = Vector3(0.6789551, 3.0522156, 1.5883179)

[sub_resource type="BoxShape3D" id="BoxShape3D_uhr41"]
size = Vector3(0.04537964, 3.03125, 1.6032715)

[sub_resource type="BoxShape3D" id="BoxShape3D_85ygy"]
size = Vector3(0.04537964, 3.03125, 0.6935425)

[sub_resource type="BoxShape3D" id="BoxShape3D_bf8va"]
size = Vector3(0.5389404, 0.6620178, 1.5691528)

[node name="wardrobe" type="Node3D" unique_id=1998482516 node_paths=PackedStringArray("open_mesh", "closed_mesh", "open_collision", "open_draggable_collision", "closed_collision")]
script = ExtResource("1_dejff")
open_mesh = NodePath("OpenMesh")
closed_mesh = NodePath("ClosedMesh")
open_collision = NodePath("OpenCollision")
open_draggable_collision = NodePath("OpenDraggableCollision")
closed_collision = NodePath("ClosedCollision")

[node name="InWardrobeArea" type="Area3D" parent="." unique_id=1338489578]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="InWardrobeArea" unique_id=378502451]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.14682198, 1.6227605, 0)
shape = SubResource("BoxShape3D_ank7t")
debug_color = Color(0, 1, 0.5666666, 1)

[node name="InteractableComponent" type="Node3D" parent="." unique_id=1118434720 node_paths=PackedStringArray("Contents_Node", "UI_Sprite_Node", "SubViewport_Node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5370538, 0)
script = ExtResource("1_cpeuc")
Contents_Node = NodePath("Contents")
UI_Sprite_Node = NodePath("Contents/UI")
SubViewport_Node = NodePath("Contents/UI/SubViewport")
ActionToPress = SubResource("InputEventAction_75gw0")

[node name="Contents" type="Node3D" parent="InteractableComponent" unique_id=48194554]

[node name="UI" type="Sprite3D" parent="InteractableComponent/Contents" unique_id=1489212653]
transform = Transform3D(0.105, 0, 0, 0, 0.105, 0, 0, 0, 0.105, 0, -0.38994098, 0)
billboard = 1
no_depth_test = true
render_priority = 1
texture = SubResource("ViewportTexture_dejff")

[node name="SubViewport" type="SubViewport" parent="InteractableComponent/Contents/UI" unique_id=91487049]
transparent_bg = true
gui_disable_input = true
size = Vector2i(1150, 1150)

[node name="Key" type="Label" parent="InteractableComponent/Contents/UI/SubViewport" unique_id=972159148]
offset_left = 500.0
offset_top = 500.0
offset_right = 629.0
offset_bottom = 646.0
theme = ExtResource("2_dejff")
theme_override_font_sizes/font_size = 106
text = "[E]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerAreaBox" type="Area3D" parent="InteractableComponent/Contents" unique_id=696654528]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractableComponent/Contents/PlayerAreaBox" unique_id=1288177423]
shape = SubResource("BoxShape3D_nyf0v")

[node name="MimicRaycastBox" type="Area3D" parent="InteractableComponent/Contents" unique_id=1197192282]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractableComponent/Contents/MimicRaycastBox" unique_id=1312700964]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2082315, 0.0063552856, 0.001440078)
shape = SubResource("BoxShape3D_lutt7")

[node name="OpenMesh" type="MeshInstance3D" parent="." unique_id=1210037574]
transform = Transform3D(0.34748563, 0, 0, 0, 1.5031549, 0, 0, 0, 0.8024151, 0, 1.5192708, 0)
material_override = SubResource("StandardMaterial3D_8ckvv")
mesh = SubResource("ArrayMesh_iyoid")

[node name="hang_bar" type="MeshInstance3D" parent="OpenMesh" unique_id=771010341]
transform = Transform3D(0.043122172, 0, 0, 0, -4.3220805e-08, -0.00996859, 0, 0.98877466, -4.3574e-10, 0, 0.7344912, -0.0006420394)
material_override = SubResource("StandardMaterial3D_8ckvv")
mesh = SubResource("ArrayMesh_sl7q1")

[node name="Drawer" type="MeshInstance3D" parent="OpenMesh" unique_id=796518786]
transform = Transform3D(0.72801596, 0, 0, 0, 0.29259393, 0, 0, 0, 0.99777144, 0.21832445, -0.88593256, 0)
material_override = SubResource("StandardMaterial3D_8ckvv")
mesh = SubResource("ArrayMesh_hbpff")

[node name="ClosedMesh" type="MeshInstance3D" parent="." unique_id=665236544]
transform = Transform3D(0.34748557, 0, 0, 0, 1.5031567, 0, 0, 0, 0.80241424, 0, 1.5192715, 0)
visible = false
material_override = SubResource("StandardMaterial3D_8ckvv")
mesh = SubResource("ArrayMesh_1y52n")

[node name="OpenCollision" type="StaticBody3D" parent="." unique_id=1411586812]
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="OpenCollision" unique_id=1618974890]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.16052246, 1.5197296, 0.01876831)
shape = SubResource("BoxShape3D_dejff")

[node name="ClosedCollision" type="StaticBody3D" parent="." unique_id=846314608]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape3D2" type="CollisionShape3D" parent="ClosedCollision" unique_id=1478996627]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.32199407, 1.5410895, 0.0072021484)
shape = SubResource("BoxShape3D_uhr41")
debug_color = Color(0.98, 0.65333337, 0, 0.27058825)

[node name="CollisionShape3D5" type="CollisionShape3D" parent="ClosedCollision" unique_id=840724850]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.27421206, 1.5410895, 0.0072021484)
shape = SubResource("BoxShape3D_uhr41")
debug_color = Color(0.98, 0.65333337, 0, 0.27058825)

[node name="CollisionShape3D3" type="CollisionShape3D" parent="ClosedCollision" unique_id=850345529]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0.1057277, 1.5410895, -0.7569832)
shape = SubResource("BoxShape3D_85ygy")
debug_color = Color(0.98, 0.65333337, 0, 0.27058825)

[node name="CollisionShape3D4" type="CollisionShape3D" parent="ClosedCollision" unique_id=200197710]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0.003793031, 1.5410895, 0.76927507)
shape = SubResource("BoxShape3D_85ygy")
debug_color = Color(0.98, 0.65333337, 0, 0.27058825)

[node name="DraggableCollision" type="StaticBody3D" parent="." unique_id=1611651884]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DraggableCollision" unique_id=387174943]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.32199407, 1.5410895, 0.0072021484)
shape = SubResource("BoxShape3D_uhr41")
debug_color = Color(0.98, 0.65333337, 0, 0.27058825)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="DraggableCollision" unique_id=2111426961]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0.003793031, 1.5410895, -0.7693193)
shape = SubResource("BoxShape3D_85ygy")
debug_color = Color(0.98, 0.65333337, 0, 0.27058825)

[node name="CollisionShape3D3" type="CollisionShape3D" parent="DraggableCollision" unique_id=521898010]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0.003793031, 1.5410895, 0.7896519)
shape = SubResource("BoxShape3D_85ygy")
debug_color = Color(0.98, 0.65333337, 0, 0.27058825)

[node name="CollisionShape3D4" type="CollisionShape3D" parent="DraggableCollision" unique_id=1974970503]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05657959, 0.32115173, 0.010467529)
shape = SubResource("BoxShape3D_bf8va")
debug_color = Color(0.98, 0.65333337, 0, 0.27058825)

[node name="OpenDraggableCollision" type="StaticBody3D" parent="." unique_id=698460300]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D2" type="CollisionShape3D" parent="OpenDraggableCollision" unique_id=1114544840]
transform = Transform3D(0.3652017, 0, -0.9309284, 0, 1, 0, 0.9309284, 0, 0.3652017, -0.52292514, 1.5410895, -0.73266184)
shape = SubResource("BoxShape3D_85ygy")
debug_color = Color(0.98, 0.65333337, 0, 0.27058825)

[node name="CollisionShape3D3" type="CollisionShape3D" parent="OpenDraggableCollision" unique_id=1811345338]
transform = Transform3D(-0.40726277, 0, -0.91331106, 0, 1, 0, 0.91331106, 0, -0.40726277, -0.52292514, 1.5410895, 0.7449523)
shape = SubResource("BoxShape3D_85ygy")
debug_color = Color(0.98, 0.65333337, 0, 0.27058825)

[connection signal="body_entered" from="InWardrobeArea" to="." method="_on_in_wardrobe_area_body_entered"]
[connection signal="body_exited" from="InWardrobeArea" to="." method="_on_in_wardrobe_area_body_exited"]
[connection signal="action_triggered" from="InteractableComponent" to="." method="_on_wardrobe_toggled"]
[connection signal="body_entered" from="InteractableComponent/Contents/PlayerAreaBox" to="InteractableComponent" method="_on_player_area_box_body_entered"]
[connection signal="body_exited" from="InteractableComponent/Contents/PlayerAreaBox" to="InteractableComponent" method="_on_player_area_box_body_exited"]
[connection signal="area_entered" from="InteractableComponent/Contents/MimicRaycastBox" to="InteractableComponent" method="_on_mimic_raycast_box_area_entered"]
[connection signal="area_exited" from="InteractableComponent/Contents/MimicRaycastBox" to="InteractableComponent" method="_on_mimic_raycast_box_area_exited"]
